@@ -1,5 +1,7 @@
 Revision history for WebService-FogBugz
 
+        - New Maintainer: Barbie.
+
 0.05   Sat Feb  9 11:47:46 JST 2013
        - Start using git, Module::Install, 
 
